<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/loginCard"
    app:cardCornerRadius="@dimen/loginCardRadius"
    android:elevation="5dp"
    android:layout_gravity="center"
    android:layout_marginTop="@dimen/loginViewsMargin"
    android:layout_marginBottom="@dimen/loginViewsMargin"
    android:background="@color/whiteCardColor"
    tools:context="hr.algebra.esouvenir.LoginActivity">

    <LinearLayout
        style="@style/linearParent"
        android:layout_gravity="center"
        android:background="@drawable/time_to_travel"
        android:padding="@dimen/loginViewsMargin">

        <TextView
            style="@style/headerTextPrimary"
            android:text="@string/register"
            android:layout_marginRight="130dp"
            android:layout_marginTop="@dimen/loginViewsMargin"/>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/parent"
            android:layout_marginTop="@dimen/signup_text_margin_top">
            <EditText
                android:id="@+id/etUsername"
                style="@style/modifiedEditText"
                android:inputType="text"
                android:maxLines="1"
                android:hint="Username"/>
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            style="@style/parent"
            android:layout_marginTop="@dimen/signup_text_margin_top">
            <EditText
                android:id="@+id/etEmail"
                style="@style/modifiedEditText"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:hint="@string/login_email_hint"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/parent"
            android:layout_marginTop="@dimen/signup_text_margin_top">
            <EditText
                android:id="@+id/etPass"
                style="@style/modifiedEditText"
                android:hint="@string/login_password_hint"
                android:maxLines="1"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnRegister"
            style="@style/loginButton"
            android:layout_marginTop="5dp"
            android:layout_gravity="center"
            android:text="Register" />

        <TextView
            android:id="@+id/tvLogin"
            style="@style/parent"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="#3b537b"
            android:text="@string/signup_login_hint"
            android:layout_marginTop="15dp"
            android:clickable="true"
            />

    </LinearLayout>
</com.google.android.material.card.MaterialCardView>