<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/loginCard"
    app:cardCornerRadius="@dimen/loginCardRadius"
    android:elevation="5dp"
    android:layout_gravity="center"
    android:layout_marginTop="@dimen/loginViewsMargin"
    android:layout_marginBottom="@dimen/loginViewsMargin"
    android:background="@color/whiteCardColor">



    <LinearLayout
        style="@style/linearParent"
        android:layout_gravity="center"
        android:background="@drawable/time_to_travel"
        android:padding="@dimen/loginViewsMargin">

        <TextView
            android:layout_marginTop="60dp"
            android:layout_marginRight="160dp"
            android:layout_width="120dp"
            style="@style/headerTextPrimary"
            android:text="Login" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputEmail"
            style="@style/parent"
            android:layout_marginTop="@dimen/loginViewsMargin">
            <EditText
                android:id="@+id/usernameLogin"
                style="@style/modifiedEditText"
                android:inputType="text"
                android:maxLines="1"
                android:hint="@string/login_username_hint"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputPassword"
            style="@style/parent"
            android:layout_marginTop="@dimen/loginViewsMargin">
            <EditText
                android:id="@+id/passwordLogin"
                style="@style/modifiedEditText"
                android:hint="@string/login_password_hint"
                android:maxLines="1"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/btnLogin"
            style="@style/loginButton"
            android:text="Login"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/loginViewsMargin"/>

        <TextView
            android:id="@+id/tvRedirectRegister"
            android:layout_gravity="center_horizontal"
            android:textStyle="bold"
            android:padding="10dp"
            android:textColor="#3b537b"
            android:text="@string/login_signup_hint"
            android:layout_marginTop="10dp"
            android:layout_height="40dp"
            android:layout_width="220dp"/>


    </LinearLayout>
</com.google.android.material.card.MaterialCardView>



